--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@walletconnect/web3-provider": "^1.5.0",
+    "airtable": "^0.11.1",
     "ethers": "^5.4.2",
     "next": "11.0.1",
     "react": "17.0.2",
