--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.5",
     "@walletconnect/web3-provider": "^1.5.0",
     "airtable": "^0.11.1",
     "ethers": "^5.4.2",
+    "graphql": "^15.5.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
